# Algorithms-for-finding-substrings-in-a-string

./: CMakeLists.txt  README.md  main.cpp  program
extra/Brute_Force_algorithm/: naive_search.cpp  naive_search.h
extra/Karp-Rabin_algorithm/: rabin-karp.h  rabin_karp.cpp
extra/aho_corasick/: aho_corasick.cpp  aho_corasick.h
extra/bm_search/: boyer_moore_search.cpp  boyer_moore_search.h
extra/kmp_search/: kmp_search.cpp  kmp_search.h
extra/tests/test1/: pattern1.txt  text1.txt
extra/tests/test10/: pattern10.txt  text10.txt
extra/tests/test3/: pattern3.txt
extra/tests/test4/: pattern4.txt
extra/tests/test6/: pattern6.txt
extra/tests/test7/: create_text7.py  pattern7.txt
extra/tests/test8/: pattern8.txt
extra/tests/test9/: pattern9.txt
extra/utils/: utils.cpp  utils.h
extra/z_search/: z_search.cpp  z_search.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
output/: main
output/main.dSYM/Contents/Resources/DWARF/: main
output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
